# zpm

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  search.c  what_provides.c
src/: CMakeLists.txt  zpm.c  zpm.cc  zpm.h  zpm_checksum.cc  zpm_checksum.h  zpm_download.cc  zpm_download.h  zpm_metalink.cc  zpm_metalink.h  zpm_private.h  zpm_query.cc  zpm_query_search.cc  zpm_query_what_provides.cc  zpm_repoinfo.cc  zpm_repoinfo.h  zpm_repos.cc  zpm_repos.h  zpm_solvable_iter.cc  zpm_solvable_iter.h  zpm_tmpfile.h  zpm_types_private.h
test/: CMakeLists.txt  zpm_checksum_test.c  zpm_checksum_test.cc
